WebKit2: Crash in WebPage::getPositionInformation. https://bugs.webkit.org/show_bug.cgi?id=129936 <rdar://problem/16264550>

Reviewed by Eric Carlson.

Missing null check on the node renderer in one code path.
If the page body is smaller than the document, hit testing
will return HTMLHtmlElement that has no renderer.

* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::getPositionInformation):



Canonical link: https://commits.webkit.org/148019@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165397 268f45cc-cd09-0410-ab3c-d52691b4dbfc